# compensation-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-build.in
backend/alembic/: env.py
backend/alembic/versions/: 089dead90284_s6_salary_import_and_records.py  09e48d07db83_s4_audit_log_and_pii_encryption.py  2797ca8c8660_s7_salary_component_and_structure.py  a3f6c9d5b1e7_s13d_reviewer_scope_rbac.py  (+39 more)
backend/app/: main.py
backend/tests/: conftest.py  test_alembic_upgrade.py  test_alembic_url.py  test_approval_api.py  test_attendance_api.py  test_audit.py  test_audit_api.py  test_auth_api.py  test_batch_api.py  test_batch_model.py  test_batch_router_unit.py  test_batch_service_unit.py  test_budget_api.py  test_comp_api.py  test_comp_structure.py  test_component_catalog_api.py  test_config_failclosed.py  test_crypto.py  test_d1_migration_safety.py  test_dashboard_api.py  test_dashboard_query_compile.py  test_deploy_security.py  test_dingtalk_api.py  test_dingtalk_client.py  test_dingtalk_manager_review.py  test_dingtalk_org_freshness.py  test_dingtalk_org_notifications.py  test_dingtalk_org_structure.py  test_dingtalk_org_sync_alembic.py  test_dingtalk_org_sync_api.py  test_dingtalk_org_sync_job.py  test_dingtalk_org_sync_migration.py  test_dingtalk_org_sync_models.py  test_dingtalk_read_sync.py  test_dingtalk_read_sync_api.py  test_dingtalk_session_throttle.py  test_e2e_bootstrap.py  test_employee_tax_opening_api.py  test_export_api.py  test_export_excel.py  (+37 more)
deploy/: Caddyfile  (+4 more)
(+241 files in other folders)
